<resources>
    <string name="app_name">MJC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_ForgetPassword">Forget Password?</string>
    <string name="login_CreateAccount">Create Account</string>
    <string name="login_TabLayoutList1">Guest</string>
    <string name="login_TabLayoutList2">Admin</string>
    <string name="login_Welcome">Welcome</string>
    <string name="login_Email">Email</string>
    <string name="login_Password">Password</string>
    <string name="login_LoginBtn">Login</string>
    <string name="register_GuestRegister">Guest Register</string>
    <string name="register_Username">Username</string>
    <string name="register_Email">Email</string>
    <string name="register_PhoneNo">Phone No</string>
    <string name="register_DOB">DOB</string>
    <string name="register_Password">Password</string>
    <string name="register_RegisterBtn">Register</string>
    <string name="register_CancelBtn">Cancel</string>

    <string-array name="Home">
        <item>My Booking</item>
        <item>Check In / Out</item>
        <item>Booking Now</item>
        <item>Room Service</item>
    </string-array>
</resources>